third_party/rust/chromium_crates_io/vendor/cxx-1.0.110/tests/ui/expected_named.stderr
error[E0106]: missing lifetime specifier
 --> tests/ui/expected_named.rs:5:36
  |
5 |         fn borrowed() -> UniquePtr<Borrowed>;
  |                                    ^^^^^^^^ expected named lifetime parameter
  |
  = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime
  |
5 |         fn borrowed() -> UniquePtr<Borrowed<'static>>;
  |                                            +++++++++
